# homework-4

./: '  .env  .gitignore  Auth.py  CalendarPage.py  CalendarTest.py  CreateResumePageTest.py  DealPage.py  DealTest.py  Dockerfile  EventPage.py  EventTest.py  LoginPage.py  LoginTest.py  Makefile  PageObject.py  Pages.py  Pipfile  README.MD  README.md  Readme.md  ResumeData.py  TestData.py  addingUsers.py  alltests.py  base_info_tests_pytonchik.py  basic.py  basic_grid.py  buttons.py  components.py  config.py  constants.py  consts.py  elements.py  extentions.py  formsValidate.py  grid.bat  grid.sh  helpers.py  hub.sh  (+59 more)
Auth/: Auth.py  AuthComponents.py  AuthPage.py  __init__.py
Banners/: Banners.py  __init__.py
Base/: Base.py  BaseComponent.py  BasePage.py  __init__.py
Components/: auth_form.py  auth_page_components.py  common.py  component.py  feed_page_components.py  forum_page_components.py  group_page_components.py  groups_page.py  groups_page_components.py  keyword_components.py  main_group_page_components.py  main_page.py  main_page_components.py  market_page_components.py  shop_feed_page.py  shop_forum_page_components.py  shop_market_page.py  shop_page_components.py  shop_topic_page.py  theme_page_components.py
Favorites/: FavoritesComponents.py  FavoritesPage.py  __init__.py
Files/: upload.pkt  upload.txt
Home/: Buttons.py  Directories.py  Documents.py  HomeComponents.py  HomePage.py  TabsAtHome.py  __init__.py
PageObjects/: page.py  page_objects.py
Pages/: auth_page.py  film_page.py  page.py  people_page.py  profile_page.py  search_page.py  (+2 more)
(+1852 files in other folders)
