[tool.poetry]
name = "homework-4-dev"
version = "0.1.0"
description = ""
authors = ["dmitrijgulacenkov <pingvin1959@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.52"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
